[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/break-spaces-003.html https://bugs.webkit.org/show_bug.cgi?id=205237 <rdar://problem/57940108>

Reviewed by Antti Koivisto.

"white-space: break-spaces" : A line breaking opportunity exists after every preserved white space character,
including between white space characters.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::Content::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/218442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253526 268f45cc-cd09-0410-ab3c-d52691b4dbfc